# for-selenium

./: .gitignore  captcha.py  captcha_class.py  cookie.py  element.py  for-selenium.code-workspace  img.py  mypy.ini  pyproject.toml  recaptcha.py  script.py  script_new.py  typtupoi.py
captcha/: captcha.py  captcha_class.py  img.py  recaptcha.py
driver/: cookie.py  element.py  script.py  script_class.py  script_new.py
jupyter/: window.ipynb
sound/: test.py
