[tool.poetry]
name = "for-selenium"
version = "0.1.0"
description = ""
authors = ["WriteCoin <sovtsardom@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
undetected-chromedriver = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
